# get-42-projects

./: .env.template  .gitignore  .gitmodules  Makefile  README.md  guide42api.md  main.py  pyproject.toml
src/: __init__.py  config.py  converters.py  exceptions.py  fetcher.py  http_client.py  logger.py  payloads.py  planner.py  projects.py  rate_limiter.py  sync.py
src/anytype/: __init__.py  client.py  table.py
src/anytype_sync/: __init__.py  batch_processor.py  cache_manager.py  syncer.py
src/cache/: __init__.py  base.py  sqlite_cache.py
src/fortytwo/: __init__.py  projects.py
src/fortytwo_api/: __init__.py  api_client.py  client.py  session_details.py
