[project]
name = "get-42-projects"
version = "0.1.0"
description = "42からプロジェクト情報を取得し、Anytypeにインポートするツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
